weight logger updated

--- a/Backend/views/components/exercise-log-modal.html
+++ b/Backend/views/components/exercise-log-modal.html
@@ -12,7 +12,7 @@
             </div>
             <div class="modal-body">
                     <div class="dropdown search">
-                            <input type="search" id="exercisesearchBar" placeholder="search food" class="form-control dropdown-toggle"
+                            <input type="search" id="exercisesearchBar" placeholder="search exercise" class="form-control dropdown-toggle"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <div class="dropdown-menu" id="exercise-search-dropdown-menu" aria-labelledby="exercisesearchBar"
                                 style="max-height: 400px;overflow-y: scroll;width:100%">
