--- a/Backend/views/dashboard.html
+++ b/Backend/views/dashboard.html
@@ -163,7 +163,7 @@
             <div class="col-md-6 pt-2">
                 <div class="card">
                     <div class="card-header bg-primary">
-                        <h3 class="card-title text-center text-white ">Today's Intake</h3>
+                        <h3 class="card-title text-center text-white ">Today's Exercise</h3>
                     </div>
                     <table class="table table-responsive-sm">
                             <thead class="labels  text-white">
