add goal aligned

--- a/Backend/views/components/add-goal-modal.html
+++ b/Backend/views/components/add-goal-modal.html
@@ -12,35 +12,47 @@
                     <div class="container-fluid">
 
                         <div class="form-group row">
-                            <label class="col-form-label text-dark">Goal Weight (lbs)</label>
-                            <div class="col-lg-8">
+                            <div class="col-lg-6">
+                                <label class="col-form-label text-dark">Goal Weight (lbs)</label>
+                            </div>
+
+                            <div class="col-lg-6">
                                 <input type="number" id="add-goal-weight" min="22" max="1000" class="form-control"
                                     required>
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label class="col-form-label text-dark">Neck (Inches)</label>
-                            <div class="col-lg-8">
+                            <div class="col-lg-6">
+                                <label class="col-form-label text-dark">Neck (Inches)</label>
+                            </div>
+                            <div class="col-lg-6">
                                 <input type="number" id="add-goal-neck" min="10" max="500" class="form-control"
                                     required>
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label class="col-form-label text-dark">Waist (Inches)</label>
-                            <div class="col-lg-8">
+                            <div class="col-lg-6">
+                                <label class="col-form-label text-dark">Waist (Inches)</label>
+                            </div>
+                            <div class="col-lg-6">
                                 <input type="number" id="add-goal-waist" min="10" max="500" class="form-control"
                                     required>
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label class="col-form-label text-dark" >Hips (Inches)</label>
-                            <div class="col-lg-8">
-                                <input type="number" id="add-goal-hips" min="10" max="500" class="form-control" required>
+                            <div class="col-lg-6">
+                                <label class="col-form-label text-dark">Hips (Inches)</label>
+                            </div>
+                            <div class="col-lg-6">
+                                <input type="number" id="add-goal-hips" min="10" max="500" class="form-control"
+                                    required>
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label class="col-form-label text-dark">Date of Completion</label>
-                            <div class="col-lg-8">
+                            <div class="col-lg-6">
+                                <label class="col-form-label text-dark">Date of Completion</label>
+                            </div>
+                            <div class="col-lg-6">
                                 <input type="date" id="add-goal-date" class="form-control" required>
                             </div>
                         </div>
